--- a/Romanian/main/AuthManager.apk/res/values-ro/strings.xml
+++ b/Romanian/main/AuthManager.apk/res/values-ro/strings.xml
@@ -222,6 +222,8 @@
     <string name="HIPS_Perm_background_start_activity_Desc">Pornire în fundal</string>
     <string name="HIPS_Perm_get_accounts">Accesare conturi de pe telefon</string>
     <string name="HIPS_Perm_get_accounts_Desc">Accesarea tuturor conturilor de pe telefon</string>
+    <string name="HIPS_Perm_get_installed_apps">Obținere informații despre aplicațiile instalate</string>
+    <string name="HIPS_Perm_get_installed_apps_Desc">Obținerea de informații despre aplicațiile instalate pe acest dispozitiv</string>
     <string name="HIPS_Perm_get_tasks">Obținerea sarcinilor</string>
     <string name="HIPS_Perm_get_tasks_Desc">Obținerea tuturor sarcinilor</string>
     <string name="HIPS_Perm_install_shortcut">Widgeturi pe ecranul principal</string>
@@ -232,6 +234,8 @@
     <string name="HIPS_Perm_process_outgoing_calls_Desc">Monitorizarea și încheierea apelurilor</string>
     <string name="HIPS_Perm_read_notification_sms">Serviciu SMS</string>
     <string name="HIPS_Perm_read_notification_sms_Desc">Citire date despre serviciul SMS</string>
+    <string name="HIPS_Perm_service_foreground">Servicii în fundal</string>
+    <string name="HIPS_Perm_service_foreground_Desc">Servicii în fundal</string>
     <string name="HIPS_Perm_show_when_locked">Afișare în Blocarea ecranului</string>
     <string name="HIPS_Perm_show_when_locked_Desc">Afișare în Blocarea ecranului</string>
     <string name="HIPS_Perm_use_sip">Servicii video</string>
