--- a/Romanian/main/Calculator.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Calculator.apk/res/values-ro/strings.xml
@@ -310,6 +310,7 @@
     <string name="unit_data_display_weight_qian">Qian</string>
     <string name="unit_data_display_weight_st">Short ton</string>
     <string name="unit_data_display_weight_t">Tonă</string>
+    <string name="unit_data_display_weight_taijin">Jin(Taiwan)</string>
     <string name="unit_data_display_weight_ug">Microgram</string>
     <string name="unit_data_display_weight_uk.cwt">UK hundredweight</string>
     <string name="unit_data_display_weight_uk.st">Stone</string>
@@ -376,6 +377,7 @@
     <string name="unit_data_short_weight_lt">l.t</string>
     <string name="unit_data_short_weight_qian">qian</string>
     <string name="unit_data_short_weight_st">sh.t</string>
+    <string name="unit_data_short_weight_taijin">jin(tw)</string>
     <string name="unit_data_short_weight_ug">μg</string>
     <string name="unit_data_short_weight_uk.cwt">cwt</string>
     <string name="unit_data_short_weight_us.cwt">cwt</string>
