--- a/Romanian/main/TeleService.apk/res/values-ro/strings.xml
+++ b/Romanian/main/TeleService.apk/res/values-ro/strings.xml
@@ -1101,6 +1101,9 @@ Contactaţi operatorul în cazul în care această problemă persistă."</string
     <string name="voicemail_settings_number_label">Număr mesagerie vocală</string>
     <string name="voicemail_settings_number_title">Număr mesagerie vocală</string>
     <string name="voip_setting">Setări VoIP</string>
+    <string name="volte_provision_notification_activate">Activați</string>
+    <string name="volte_provision_text">Detectarea VoLTE a cartelei SIM nu este activată; o activați acum?</string>
+    <string name="volte_provision_title">Activare VoLTE</string>
     <string name="volte_switch_summary">Utilizați VoLTE pentru îmbunătățirea calității apelurilor video și vocale</string>
     <string name="volte_switch_title">VoLTE activat</string>
     <string name="wait_prompt_str">"Trimiteţi următoarele tonuri?
