--- a/Romanian/main/framework-ext-res.apk/res/values-ro/strings.xml
+++ b/Romanian/main/framework-ext-res.apk/res/values-ro/strings.xml
@@ -73,7 +73,7 @@
     <string name="memory_clear_nothing_result">Nimic de curăţat în memoria cache</string>
     <string name="memory_clear_result">%1$sB goliţi | %2$sB disponibili</string>
     <string name="miui">MIUI</string>
-    <string name="miui_upgrading_notification_title">Se actualizează sistemul, unele caracteristici pot fi limitate</string>
+    <string name="miui_upgrading_notification_title">Se încarcă sistemul, unele caracteristici pot fi limitate</string>
     <string name="package_delete_confirm_step_1">Ștergeți %s?</string>
     <string name="package_delete_confirm_step_2">Eliminarea aceastei aplicații poate face sistemul instabil.</string>
     <string name="package_delete_confirm_step_3">"Nu veți mai putea deschide această aplicație după ce o veți elimina."</string>
